@@ -10,6 +10,7 @@
 package edu.wustl.catissuecore.domain;
 
 import edu.wustl.catissuecore.actionForm.TransferEventParametersForm;
+import edu.wustl.catissuecore.util.global.Constants;
 import edu.wustl.common.actionForm.AbstractActionForm;
 import edu.wustl.common.actionForm.IValueObject;
 import edu.wustl.common.util.logger.Logger;
@@ -17,11 +18,17 @@ import edu.wustl.common.util.logger.Logger;
 /**
  * Attributes associated with moving specimen from one storage location to another.
  * @hibernate.joined-subclass table="CATISSUE_TRANSFER_EVENT_PARAM"
- * @hibernate.joined-subclass-key column="IDENTIFIER" 
+ * @hibernate.joined-subclass-key column="IDENTIFIER"
  */
 public class TransferEventParameters extends SpecimenEventParameters implements java.io.Serializable
 {
-
+	/**
+	 * logger Logger - Generic logger.
+	 */
+	private static org.apache.log4j.Logger logger = Logger.getLogger(TransferEventParameters.class);
+	/**
+	 * Serial Version ID of the class.
+	 */
 	private static final long serialVersionUID = 1234567890L;
 
 	/**
@@ -45,7 +52,7 @@ public class TransferEventParameters extends SpecimenEventParameters implements 
 	protected Integer toPositionDimensionTwo;
 
 	/**
-	 * Storage Container to which the transfer is made. 
+	 * Storage Container to which the transfer is made.
 	 */
 	protected StorageContainer toStorageContainer;
 
@@ -55,8 +62,10 @@ public class TransferEventParameters extends SpecimenEventParameters implements 
 	protected StorageContainer fromStorageContainer;
 
 	/**
-	 * Returns the Reference to dimensional position one of the specimen in previous storage container before transfer.
-	 * @hibernate.property name="fromPositionDimensionOne" type="int" column="FROM_POSITION_DIMENSION_ONE" length="30"
+	 * Returns the Reference to dimensional position one of the specimen in previous
+	 * storage container before transfer.
+	 * @hibernate.property name="fromPositionDimensionOne" type="int"
+	 * column="FROM_POSITION_DIMENSION_ONE" length="30"
 	 * @return fromPositionDimensionOne.
 	 */
 	public Integer getFromPositionDimensionOne()
@@ -65,7 +74,7 @@ public class TransferEventParameters extends SpecimenEventParameters implements 
 	}
 
 	/**
-	 * Sets the fromPositionDimensionOne. 
+	 * Sets the fromPositionDimensionOne.
 	 * @param fromPositionDimensionOne
 	 * Reference to dimensional position one of the specimen in previous storage container before transfer.
 	 */
@@ -75,8 +84,10 @@ public class TransferEventParameters extends SpecimenEventParameters implements 
 	}
 
 	/**
-	 * Returns the Reference to dimensional position two of the specimen in previous storage container before transfer.
-	 * @hibernate.property name="fromPositionDimensionTwo" type="int" column="FROM_POSITION_DIMENSION_TWO" length="30"
+	 * Returns the Reference to dimensional position two of the specimen in previous
+	 * storage container before transfer.
+	 * @hibernate.property name="fromPositionDimensionTwo" type="int"
+	 * column="FROM_POSITION_DIMENSION_TWO" length="30"
 	 * @return fromPositionDimensionTwo.
 	 */
 	public Integer getFromPositionDimensionTwo()
@@ -85,8 +96,7 @@ public class TransferEventParameters extends SpecimenEventParameters implements 
 	}
 
 	/**
-	 * Sets the fromPositionDimensionTwo. 
-	 * 
+	 * Sets the fromPositionDimensionTwo.
 	 * @param fromPositionDimensionTwo
 	 * Reference to dimensional position two of the specimen in previous storage container before transfer.
 	 */
@@ -96,8 +106,10 @@ public class TransferEventParameters extends SpecimenEventParameters implements 
 	}
 
 	/**
-	 * Returns the Reference to dimensional position one of the specimen in new storage container after transfer.
-	 * @hibernate.property name="toPositionDimensionOne" type="int" column="TO_POSITION_DIMENSION_ONE" length="30"
+	 * Returns the Reference to dimensional position one of the specimen in new storage
+	 * container after transfer.
+	 * @hibernate.property name="toPositionDimensionOne" type="int"
+	 * column="TO_POSITION_DIMENSION_ONE" length="30"
 	 * @return toPositionDimensionOne.
 	 */
 	public Integer getToPositionDimensionOne()
@@ -106,7 +118,7 @@ public class TransferEventParameters extends SpecimenEventParameters implements 
 	}
 
 	/**
-	 * Sets the toPositionDimensionOne. 
+	 * Sets the toPositionDimensionOne.
 	 * @param toPositionDimensionOne
 	 * Reference to dimensional position one of the specimen in new storage container after transfer.
 	 */
@@ -116,8 +128,10 @@ public class TransferEventParameters extends SpecimenEventParameters implements 
 	}
 
 	/**
-	 * Returns the Reference to dimensional position two of the specimen in new storage container after transfer.
-	 * @hibernate.property name="toPositionDimensionTwo" type="int" column="TO_POSITION_DIMENSION_TWO" length="30"
+	 * Returns the Reference to dimensional position two of the specimen in new
+	 * storage container after transfer.
+	 * @hibernate.property name="toPositionDimensionTwo" type="int"
+	 * column="TO_POSITION_DIMENSION_TWO" length="30"
 	 * @return toPositionDimensionTwo.
 	 */
 	public Integer getToPositionDimensionTwo()
@@ -126,7 +140,7 @@ public class TransferEventParameters extends SpecimenEventParameters implements 
 	}
 
 	/**
-	 * Sets the toPositionDimensionTwo. 
+	 * Sets the toPositionDimensionTwo.
 	 * @param toPositionDimensionTwo
 	 * Reference to dimensional position two of the specimen in new storage container after transfer.
 	 */
@@ -136,11 +150,11 @@ public class TransferEventParameters extends SpecimenEventParameters implements 
 	}
 
 	/**
-	 * Returns the new StorageContainer.  
+	 * Returns the new StorageContainer.
 	 * @hibernate.many-to-one column="TO_STORAGE_CONTAINER_ID"
 	 * class="edu.wustl.catissuecore.domain.StorageContainer"
 	 * constrained="true"
-	 * @return the new StorageContainer. 
+	 * @return the new StorageContainer.
 	 */
 	public StorageContainer getToStorageContainer()
 	{
@@ -157,11 +171,11 @@ public class TransferEventParameters extends SpecimenEventParameters implements 
 	}
 
 	/**
-	 * Returns the old StorageContainer. 
+	 * Returns the old StorageContainer.
 	 * @hibernate.many-to-one column="FROM_STORAGE_CONTAINER_ID"
 	 * class="edu.wustl.catissuecore.domain.StorageContainer"
 	 * constrained="true"
-	 * @return the old StorageContainer. 
+	 * @return the old StorageContainer.
 	 */
 	public edu.wustl.catissuecore.domain.StorageContainer getFromStorageContainer()
 	{
@@ -183,21 +197,24 @@ public class TransferEventParameters extends SpecimenEventParameters implements 
 	 * */
 	public TransferEventParameters()
 	{
-
+		super();
 	}
 
 	/**
-	 *  Parameterised constructor 
-	 * @param abstractForm
+	 * Parameterised constructor.
+	 * @param abstractForm of AbstractActionForm type.
 	 */
 	public TransferEventParameters(AbstractActionForm abstractForm)
 	{
-		setAllValues((IValueObject)abstractForm);
+		super();
+		setAllValues((IValueObject) abstractForm);
 	}
 
 	/**
-	 * This function Copies the data from an TransferEventParametersForm object to a TransferEventParameters object.
-	 * @param TransferEventParametersForm An TransferEventParametersForm object containing the information about the TransferEventParameters.  
+	 * This function Copies the data from an TransferEventParametersForm object to a
+	 * TransferEventParameters object.
+	 * @param abstractForm - TransferEventParametersForm An TransferEventParametersForm object
+	 * containing the information about the TransferEventParameters.
 	 * */
 	public void setAllValues(IValueObject abstractForm)
 	{
@@ -207,45 +224,46 @@ public class TransferEventParameters extends SpecimenEventParameters implements 
 			StorageContainer toObj = new StorageContainer();
 			if (form.getStContSelection() == 1)
 			{
-				this.toPositionDimensionOne = new Integer(form.getPositionDimensionOne());
-				this.toPositionDimensionTwo = new Integer(form.getPositionDimensionTwo());
-				toObj.setId(new Long(form.getStorageContainer()));
+				this.toPositionDimensionOne = Integer.valueOf(form.getPositionDimensionOne());
+				this.toPositionDimensionTwo = Integer.valueOf(form.getPositionDimensionTwo());
+				toObj.setId(Long.valueOf(form.getStorageContainer()));
 			}
 			else
 			{
-				if (form.getPos1() != null && !form.getPos1().trim().equals("")
-						&& form.getPos2() != null && !form.getPos2().trim().equals(""))
+				if (form.getPos1() != null && !form.getPos1().trim().
+					equals(Constants.DOUBLE_QUOTES) && form.getPos2() != null &&
+						!form.getPos2().trim().equals(Constants.DOUBLE_QUOTES))
 				{
-				this.toPositionDimensionOne = new Integer(form.getPos1());
-				this.toPositionDimensionTwo = new Integer(form.getPos2());
+					this.toPositionDimensionOne = Integer.valueOf(form.getPos1());
+					this.toPositionDimensionTwo = Integer.valueOf(form.getPos2());
 				}
 				toObj.setName(form.getSelectedContainerName());
 			}
 
 			this.toStorageContainer = toObj;
 
-			if (form.getFromStorageContainerId() != 0)
-			{
-				StorageContainer fromObj = new StorageContainer();
-				fromObj.setId(new Long(form.getFromStorageContainerId()));
-				this.fromStorageContainer = fromObj;
-
-				this.fromPositionDimensionOne = new Integer(form.getFromPositionDimensionOne());
-				this.fromPositionDimensionTwo = new Integer(form.getFromPositionDimensionTwo());
-			}
-			else
+			if (form.getFromStorageContainerId() == 0)
 			{
 				this.fromStorageContainer = null;
 				this.fromPositionDimensionOne = null;
 				this.fromPositionDimensionTwo = null;
 			}
+			else
+			{
+				StorageContainer fromObj = new StorageContainer();
+				fromObj.setId(Long.valueOf(form.getFromStorageContainerId()));
+				this.fromStorageContainer = fromObj;
 
+				this.fromPositionDimensionOne = Integer.valueOf(
+						form.getFromPositionDimensionOne());
+				this.fromPositionDimensionTwo = Integer.valueOf(
+						form.getFromPositionDimensionTwo());
+			}
 			super.setAllValues(form);
 		}
 		catch (Exception excp)
 		{
-			Logger.out.error(excp.getMessage());
+			logger.error(excp.getMessage());
 		}
 	}
-
 }
